--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-bootstrap": "^2.1.1",
+    "react-chat-elements": "^10.16.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
     "react-custom-roulette": "^1.1.8",
